<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.12">
  <DUT Name="ST_MotorCommand" Id="{7c192153-b8d6-419a-981a-4b15c59b70c8}">
    <Declaration><![CDATA[TYPE ST_MotorCommand :
STRUCT
	bRun         : BOOL;
    bStop        : BOOL;
    iPosition    : INT;
    bBusy        : BOOL;
END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>